# llm-quant-guardrail

./: README.md  build_guardrail_dataset.py  gitignore  pyproject.toml  repo_structure.txt  requirements.txt
data/: draft_portfolio_ideas.md  draft_portfolio_ideas2.md  draft_portfolio_ideas_style_tilt_tariffs.md  guardrail_dataset.jsonl  guardrail_verdict.json  guardrail_verdict.txt  style_tilt_tariffs_guardrail_verdict_example.json
prompts/: long_pm_system_prompt.md  short_pm_system_prompt.md
src/: build_guardrail_dataset.py  model_backends.py  run_guardrail_demo.py
src/llm_quant_guardrail/: client.py  prompt_loader.py  schemas.py  short_pm_agent.py
src/llm_quant_guardrail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
